k8s/01-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthcare
  labels:
    name: healthcare
    istio-injection: enabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: consul
  labels:
    name: consul

---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    name: istio-system
